// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Icon / Category / Finance 8px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

<div
  className="c0"
/>
`;

exports[`Storyshots Atoms / Icon / Category / Finance 16px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Bank16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M15.872 3.172l-.743 1.856L8 2.177.872 5.028.129 3.172 8 .022l7.872 3.15zM3 6v8h2v-4h2v4h2v-4h2v4h2V6h2v8h1v2H0v-2h1V6h2z"
        fill="currentColor"
      />
      <path
        d="M8 8a2 2 0 100-4 2 2 0 000 4z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Controls16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M0 5H2.17071C2.58254 6.16519 3.69378 7 5 7C6.30622 7 7.41746 6.16519 7.82929 5H16V3H7.82929C7.41746 1.83481 6.30622 1 5 1C3.69378 1 2.58254 1.83481 2.17071 3H0V5ZM5 3C4.44772 3 4 3.44772 4 4C4 4.55228 4.44772 5 5 5C5.55228 5 6 4.55228 6 4C6 3.44772 5.55228 3 5 3Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M13.8293 13C13.4175 14.1652 12.3062 15 11 15C9.69378 15 8.58254 14.1652 8.17071 13L0 13V11L8.17071 11C8.58254 9.83481 9.69378 9 11 9C12.3062 9 13.4175 9.83481 13.8293 11H16V13H13.8293ZM12 12C12 12.5523 11.5523 13 11 13C10.4477 13 10 12.5523 10 12C10 11.4477 10.4477 11 11 11C11.5523 11 12 11.4477 12 12Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Fee16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M0 0H7.41421L15.9498 8.53554L8.53554 15.9498L0 7.41421V0ZM2 2V6.58579L8.53554 13.1213L13.1213 8.53554L6.58579 2H2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <circle
        cx="4"
        cy="4"
        fill="currentColor"
        r="1"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FeeNone16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M0.29281 1.70709L14.2928 15.7071L15.707 14.2929L1.70702 0.292877L0.29281 1.70709Z"
        fill="currentColor"
      />
      <path
        d="M0 2.99999H0.17133L3.20527 6.03393C2.87753 6.38909 2.46509 6.6649 2 6.82929V9.1707C2.85241 9.47198 3.52801 10.1476 3.82929 11H8.17134L10.1713 13H0V2.99999Z"
        fill="currentColor"
      />
      <path
        d="M5.82819 2.99999L7.82819 4.99999H12.1707C12.472 5.85241 13.1476 6.528 14 6.82929V9.1707C13.5348 9.33512 13.1223 9.61102 12.7945 9.9663L15.8282 13H16V2.99999H5.82819Z"
        fill="currentColor"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Fund16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M15 0H1V11L3 9V2H13V16H15V0Z"
        fill="currentColor"
      />
      <path
        d="M5 7H7.58636L1.00017 13.5858L1.00027 16L3.00026 16L3.00019 14.4142L9 8.41478V11L11 9V5H7L5 7Z"
        fill="currentColor"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FundVariety16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M7 0H0V7H7V0ZM2 5V2H5V5H2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M16 9H9V16H16V9ZM11 14V11H14V14H11Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M3.75015 8.58578L7.41436 12.25L3.75015 15.9142L0.0859375 12.25L3.75015 8.58578ZM2.91436 12.25L3.75015 13.0858L4.58594 12.25L3.75015 11.4142L2.91436 12.25Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M15.9144 3.75L12.2502 0.0857849L8.58594 3.75L12.2502 7.41421L15.9144 3.75ZM12.2502 4.58578L11.4144 3.75L12.2502 2.91421L13.0859 3.75L12.2502 4.58578Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Global16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M8 16A8 8 0 108 0a8 8 0 000 16zm-2.71-2.714l.031.084A6.008 6.008 0 012.083 9h2.441c.08 1.63.35 3.12.766 4.286zM6.527 9c.077 1.434.317 2.69.647 3.613.204.571.423.962.617 1.192a.75.75 0 00.209.189.75.75 0 00.21-.19c.193-.229.412-.62.616-1.19.33-.925.57-2.18.647-3.614H6.527zm2.946-2H6.527c.077-1.435.317-2.69.647-3.613.204-.571.423-.962.617-1.192A.749.749 0 018 2.006a.749.749 0 01.21.19c.193.229.412.62.616 1.19.33.924.57 2.18.647 3.614zm2.003 2c-.08 1.63-.35 3.12-.767 4.286l-.03.084A6.008 6.008 0 0013.917 9h-2.441zm2.441-2h-2.441c-.08-1.63-.35-3.12-.767-4.286a7.54 7.54 0 00-.03-.084A6.007 6.007 0 0113.917 7zM4.524 7H2.083a6.007 6.007 0 013.238-4.37l-.03.084C4.873 3.88 4.602 5.37 4.523 7z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Gold16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M5.27078 3H10.729L11.7725 7H14.229L15.7942 13H0.205566L1.77078 7H4.22731L5.27078 3ZM7.9999 9.95505L8.24904 9H7.75076L7.9999 9.95505ZM9.70557 7L9.18383 5H6.81598L6.29424 7H9.70557ZM10.316 9L9.79424 11H13.2056L12.6838 9H10.316ZM5.68383 9L6.20557 11H2.79424L3.31598 9H5.68383Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Market16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M3 0a3 3 0 00-3 3v13h13a3 3 0 003-3V0H3zM2 3a1 1 0 011-1h11v1.586L9.803 7.783l-4-2L2 9.586V3zm0 9.414V14h11a1 1 0 001-1V6.414l-3.803 3.803-4-2L2 12.414z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Money16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8 9.5C8.82843 9.5 9.5 8.82843 9.5 8C9.5 7.17157 8.82843 6.5 8 6.5C7.17157 6.5 6.5 7.17157 6.5 8C6.5 8.82843 7.17157 9.5 8 9.5Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M0 13V3H16V13H0ZM2 5H14V11H2V5Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Recommended16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8H16C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C10.0282 0 11.8823 0.756068 13.2919 2.00026L13.8888 2.52705L8.75027 12H6.4666L3.79994 7H6.0666L7.61326 9.89998L11.3465 3.01904C10.3904 2.3752 9.23984 2 8 2Z"
        fill="currentColor"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        RecommendedFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8.74877 12H6.46647L3.7998 7H6.06647L7.61273 9.89924L12.3007 1.25313C11.0587 0.459797 9.58303 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16C12.4183 16 16 12.4183 16 8C16 5.89963 15.1906 3.9883 13.8666 2.56095L8.74877 12Z"
        fill="currentColor"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Stock16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M12.5858 5H9L11 3H15.9999L16 8L14 10L13.9999 6.41434L9.00008 11.4142L6.00008 8.4142L1.70718 12.7071L0.292969 11.2929L6.00008 5.58577L9.00008 8.58577L12.5858 5Z"
        fill="currentColor"
      />
      <title>
        13
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Sustainable16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M15.2914 1.81021L15.4281 0.570007L14.1879 0.706688C11.51 1.00181 9.29938 1.39131 7.57442 1.88416C5.87988 2.36831 4.52638 2.98647 3.69085 3.82199C1.58858 5.92427 1.37247 9.19845 3.04252 11.5417L0.569824 14.0144L1.98404 15.4286L10.4693 6.9433L9.05511 5.52909L4.48717 10.097C3.58112 8.56309 3.78708 6.55419 5.10507 5.2362C5.57129 4.76998 6.51858 4.26586 8.12387 3.8072C9.43894 3.43147 11.1119 3.10882 13.1537 2.84446C12.8893 4.88618 12.5667 6.55919 12.1909 7.87426C11.7323 9.47955 11.2281 10.4268 10.7619 10.8931C9.95635 11.6986 8.89456 12.0887 7.83727 12.0635L7.78953 14.0629C9.37092 14.1007 10.968 13.5154 12.1761 12.3073C13.0117 11.4717 13.6298 10.1182 14.114 8.4237C14.6068 6.69875 14.9963 4.48808 15.2914 1.81021Z"
        fill="currentColor"
      />
      <title>
        14
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SustainableFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M15.2914 1.81021L15.4281 0.570007L14.1879 0.706688C11.51 1.00181 9.29938 1.39131 7.57442 1.88416C5.87988 2.36831 4.52638 2.98647 3.69085 3.82199C1.58858 5.92427 1.37247 9.19845 3.04252 11.5417L0.569824 14.0144L1.98404 15.4286L12.9138 4.49878C12.7013 5.80972 12.4597 6.93356 12.1909 7.87426C11.7323 9.47955 11.2281 10.4268 10.7619 10.8931C9.95635 11.6986 8.89456 12.0887 7.83727 12.0635L7.78953 14.0629C9.37092 14.1007 10.968 13.5154 12.1761 12.3073C13.0117 11.4717 13.6298 10.1182 14.114 8.4237C14.6068 6.69875 14.9963 4.48808 15.2914 1.81021Z"
        fill="currentColor"
      />
      <title>
        15
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Finance 24px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Apartment24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M17 1H1v22h2V3h12v20h2V11h4v12h2V9h-6V1Z"
        fill="currentColor"
      />
      <path
        d="M8 21c0-.5523.44772-1 1-1s1 .4477 1 1v2h2v-2c0-1.6569-1.3431-3-3-3-1.65685 0-3 1.3431-3 3v2h2v-2Zm12-7h-2v-2h2v2Zm0 4h-2v-2h2v2Zm0 4h-2v-2h2v2ZM6 5H4v2h2V5ZM4 9h2v2H4V9Zm2 4H4v2h2v-2Zm2-8h2v2H8V5Zm2 4H8v2h2V9Zm-2 4h2v2H8v-2Zm6-8h-2v2h2V5Zm-2 4h2v2h-2V9Zm2 4h-2v2h2v-2Z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Approve24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M17 16H7v-2h10v2ZM7 18v2h6v-2H7ZM8.70718 6.62132l2.12132 2.12132L15.0711 4.5l1.4143 1.41421-5.6569 5.65689-3.53553-3.53557 1.41421-1.41421Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M3 0v24h18V0H3Zm16 2H5v20h14V2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Bank24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M11.9999 0.935944L23.3417 5.06021L22.6582 6.9398L11.9999 3.06407L1.34169 6.9398L0.658203 5.06021L11.9999 0.935944Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M4 10H6V20H8V17H16V20H18V10H20V20H22V8H14.8293C14.4175 6.83481 13.3062 6 12 6C10.6938 6 9.58254 6.83481 9.17071 8H2V20H4V10ZM9.17071 10H8V15H16V10H14.8293C14.4175 11.1652 13.3062 12 12 12C10.6938 12 9.58254 11.1652 9.17071 10ZM11 9C11 8.44772 11.4477 8 12 8C12.5523 8 13 8.44772 13 9C13 9.55228 12.5523 10 12 10C11.4477 10 11 9.55228 11 9Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M1 21V23H23V21H1Z"
        fill="currentColor"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        BankId24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M22.16 9.29C22.98 4.08 19.68 2 14.94 2H9.71L9 6.43h.89c.49 0 .95-.23 1.15-.55.06-.1.09-.2.09-.28 0-.19-.13-.32-.25-.42-.35-.25-.42-.52-.42-.71v-.1c.08-.48.71-.98 1.55-.98.5 0 .88.12 1.11.33.2.2.28.46.22.75-.07.33-.4.6-.6.75-.5.35-.44.66-.4.75.1.28.5.46.81.46h1.35c1.84.02 2.83.86 2.52 2.84-.29 1.83-1.7 2.62-3.37 2.64l-.67 4.23h.98c4.14 0 7.52-2.65 8.19-6.85ZM8.06 12.26l.87-5.47H8c-.43 0-1-.24-1.16-.7-.05-.14-.18-.66.54-1.17.26-.18.42-.37.45-.53a.4.4 0 0 0-.11-.4c-.16-.15-.47-.23-.86-.23-.67 0-1.14.38-1.18.65-.04.2.12.37.26.48.41.3.51.75.26 1.18-.27.43-.84.71-1.45.72H3.8l-.84 5.39-.02.1-.6 3.86h5.13l.05-.3.02-.12.54-3.46h-.02Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M2.06 18.02h2.1c.9 0 1.1.46 1.04.87-.05.34-.28.59-.67.75.5.2.7.49.62.96-.1.58-.6 1.02-1.26 1.02H1.5l.56-3.6Zm1.39 1.5c.4 0 .6-.23.63-.48.05-.28-.08-.47-.49-.47h-.36l-.14.94h.36Zm-.23 1.54c.42 0 .67-.17.73-.52.04-.3-.13-.48-.54-.48H3l-.16 1.01h.38ZM7.15 21.39c.13.23.4.3.94.25l.32-.73c-.31-.01-.32-.1-.28-.37l.13-.8c.1-.69-.46-.95-1.1-.95-.5 0-.94.15-1.38.47l-.13.82c.52-.36.82-.48 1.19-.48.3 0 .4.1.38.35-.15.1-.4.16-.67.23-.32.08-.66.16-.85.33a.8.8 0 0 0-.28.47c-.06.35.16.68.78.68.34 0 .66-.1.95-.27Zm-.36-.85c.13-.03.25-.07.35-.13l-.05.39a.72.72 0 0 0-.02.26c-.17.12-.38.19-.55.19-.18 0-.29-.13-.26-.31.03-.25.28-.32.53-.4Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M9.11 18.83h1.1l-.07.37c.35-.3.62-.41.96-.41.61 0 .9.37.8.98l-.29 1.84h-1.1l.25-1.52c.04-.28-.04-.4-.25-.4-.18 0-.33.08-.48.29l-.25 1.62h-1.1l.43-2.77ZM13.83 18.02h-1.09l-.56 3.59h1.1l.2-1.28.84 1.28h1.37l-1.08-1.6 1.34-1.18H14.6l-1.04.96.27-1.77ZM16.61 18.02h1.26l-.56 3.59h-1.25l.55-3.59Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M20.27 18.02h-1.79l-.56 3.59h2.03c1.21 0 1.86-.93 1.98-1.74.13-.84-.27-1.85-1.66-1.85Zm.42 1.8c-.1.63-.44.93-1.05.93h-.33l.3-1.88h.33c.68 0 .82.47.75.94Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Controls24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M3.17071 4C3.58254 2.83481 4.69378 2 6 2C7.30622 2 8.41746 2.83481 8.82929 4H23V6H8.82929C8.41746 7.16519 7.30622 8 6 8C4.69378 8 3.58254 7.16519 3.17071 6H1V4H3.17071ZM6 4C5.44772 4 5 4.44772 5 5C5 5.55228 5.44772 6 6 6C6.55228 6 7 5.55228 7 5C7 4.44772 6.55228 4 6 4ZM15.1707 11C15.5825 9.83481 16.6938 9 18 9C19.3062 9 20.4175 9.83481 20.8293 11H23V13H20.8293C20.4175 14.1652 19.3062 15 18 15C16.6938 15 15.5825 14.1652 15.1707 13H1V11H15.1707ZM18 11C17.4477 11 17 11.4477 17 12C17 12.5523 17.4477 13 18 13C18.5523 13 19 12.5523 19 12C19 11.4477 18.5523 11 18 11ZM9.17071 18C9.58254 16.8348 10.6938 16 12 16C13.3062 16 14.4175 16.8348 14.8293 18H23V20H14.8293C14.4175 21.1652 13.3062 22 12 22C10.6938 22 9.58254 21.1652 9.17071 20H1V18H9.17071ZM12 18C11.4477 18 11 18.4477 11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19C13 18.4477 12.5523 18 12 18Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Fee24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M6.5 8C7.32843 8 8 7.32843 8 6.5C8 5.67157 7.32843 5 6.5 5C5.67157 5 5 5.67157 5 6.5C5 7.32843 5.67157 8 6.5 8Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M11.4142 1H1V11.4142L13 23.4142L23.4142 13L11.4142 1ZM3 10.5858L3 3L10.5858 3L20.5858 13L13 20.5858L3 10.5858Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FeeNone24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M21.2998 22.7142L1.2998 2.7142L2.71402 1.29999L22.714 21.3L21.2998 22.7142Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M0 5H2.17154L5.07758 7.90604C4.49672 9.14653 3.36645 10.0784 2 10.3885V13.6115C3.68238 13.9933 5.00674 15.3176 5.38849 17H14.1715L16.1716 19H0V5ZM2 8.29198V7H3.29198C3.04 7.57672 2.57672 8.04 2 8.29198ZM3.29198 17C3.04 16.4233 2.57672 15.96 2 15.708V17H3.29198Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M7.8284 5L9.8284 7H18.6115C18.9933 8.68238 20.3176 10.0067 22 10.3885V13.1115C20.5068 13.4503 19.2957 14.5317 18.7752 15.9468L21.8284 19H24V5H7.8284ZM20.708 7C20.96 7.57672 21.4233 8.04 22 8.29198V7H20.708ZM22 15.208C21.2645 15.5294 20.7136 16.1943 20.55 17H22V15.208Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Fund24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M1 2H18V6H23V22H21V8H18V22H16V4H3V13L1 15V2Z"
        fill="currentColor"
      />
      <path
        d="M8.58636 10H6L8 8H12V12L10 14V11.4148L3.00019 18.4142L3.00026 22L1.00027 22L1.00017 17.5858L8.58636 10Z"
        fill="currentColor"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FundVariety24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <g
        clipRule="evenodd"
        fill="currentColor"
        fillRule="evenodd"
      >
        <path
          d="M1.00015 0.999998H11.0002V11H1.00015V0.999998ZM3.00015 3V9H9.00015V3H3.00015Z"
        />
        <path
          d="M13.0002 13H23.0002V23H13.0002V13ZM15.0002 15V21H21.0002V15H15.0002Z"
        />
        <path
          d="M6.00015 12.5858L11.4144 18L6.00015 23.4142L0.585938 18L6.00015 12.5858ZM3.41436 18L6.00015 20.5858L8.58594 18L6.00015 15.4142L3.41436 18Z"
        />
        <path
          d="M18.0002 0.585785L23.4144 6L18.0002 11.4142L12.5859 6L18.0002 0.585785ZM15.4144 6L18.0002 8.58578L20.5859 6L18.0002 3.41421L15.4144 6Z"
        />
      </g>
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Global24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12zm2.462-2.854a9.023 9.023 0 015.684-5.684c-.166.358-.316.745-.452 1.15-.32.962-.576 2.09-.752 3.33-1.24.176-2.368.432-3.33.752-.405.136-.792.286-1.15.452zm4.27.852c-.935.154-1.774.356-2.487.594-.846.282-1.46.596-1.84.896-.392.309-.405.49-.405.512 0 .023.013.203.405.512.38.3.994.614 1.84.896.713.238 1.552.44 2.486.594a30.709 30.709 0 010-4.004zm2.022 4.248A28.444 28.444 0 019.667 12c0-.777.03-1.529.087-2.246.717-.057 1.47-.087 2.246-.087.777 0 1.529.03 2.246.087.057.717.087 1.47.087 2.246 0 .777-.03 1.529-.087 2.246a28.46 28.46 0 01-2.246.087c-.777 0-1.529-.03-2.246-.087zm-1.812 1.812c-1.24-.176-2.368-.432-3.33-.752a11.131 11.131 0 01-1.15-.452 9.023 9.023 0 005.684 5.684 11.144 11.144 0 01-.452-1.15c-.32-.962-.576-2.09-.752-3.33zm2.056.21a30.739 30.739 0 004.004 0 16.381 16.381 0 01-.594 2.487c-.282.846-.596 1.46-.896 1.84-.309.392-.49.405-.512.405-.023 0-.203-.013-.512-.405-.3-.38-.614-.994-.896-1.84a16.385 16.385 0 01-.594-2.486zm4.856 4.27a9.023 9.023 0 005.684-5.684c-.358.166-.745.316-1.15.452-.962.32-2.09.576-3.33.752-.176 1.24-.432 2.368-.752 3.33-.136.405-.286.792-.452 1.15zm1.415-6.536a16.381 16.381 0 002.486-.594c.846-.282 1.46-.596 1.84-.896.392-.309.405-.49.405-.512 0-.023-.013-.203-.405-.512-.38-.3-.994-.614-1.84-.896a16.385 16.385 0 00-2.486-.594 30.739 30.739 0 010 4.004zm-.211-6.06c1.24.176 2.368.432 3.33.752.405.136.792.286 1.15.452a9.023 9.023 0 00-5.684-5.684c.166.358.316.745.452 1.15.32.962.576 2.09.752 3.33zm-2.056-.21a30.709 30.709 0 00-4.004 0c.154-.935.356-1.774.594-2.487.282-.846.596-1.46.896-1.84.309-.392.49-.405.512-.405.023 0 .203.013.512.405.3.38.614.994.896 1.84.238.713.44 1.552.594 2.486z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Gold24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
       
      <g
        fill="currentColor"
      >
        <path
          d="M13 5V1H11V5H13Z"
        />
        <path
          clipRule="evenodd"
          d="M15.7366 8H8.29508L6.29508 14H2.66667L0 22H24.0029L21.3362 14H17.7366L15.7366 8ZM13.228 16L12.0156 19.6373L10.8032 16H13.228ZM15.6284 14H8.40327L9.7366 10H14.2951L15.6284 14ZM14.0029 20L15.3362 16H19.8947L21.228 20H14.0029ZM8.69499 16H4.10818L2.77485 20H10.0283L8.69499 16Z"
          fillRule="evenodd"
        />
        <path
          d="M20.1701 8.00003L18.7559 6.58582L21.5843 3.75739L22.9985 5.1716L20.1701 8.00003Z"
        />
        <path
          d="M0.999849 5.1716L3.82828 8.00003L5.24249 6.58581L2.41406 3.75739L0.999849 5.1716Z"
        />
      </g>
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Growth24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M18 5V7.82843L20 5.82843V23H22V5.82843L24 7.82843V5L21 2L18 5Z M16 9H14V23H16V9Z M8 13H10V23H8V13Z M2 17H4V23H2V17Z"
        fill="currentColor"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Guidance24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M13.0002 2H19.0002V10H13.0002V11L18.4144 11L22.4144 15L18.4144 19H13.0002V22H17.0002V24H7.00015V22H11.0002V19H4.00015L4.00015 11L11.0002 11V10H4.58594L0.585938 6L4.58594 2H11.0002V0H13.0002V2ZM5.41436 8H17.0002V4H5.41436L3.41436 6L5.41436 8ZM6.00015 13L6.00015 17L17.5859 17L19.5859 15L17.5859 13L6.00015 13Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        13
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Ipo24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <g
        clipRule="evenodd"
        fill="currentColor"
        fillRule="evenodd"
      >
        <path
          d="M12.68 9.16c0-1.68 1.08-2.98 2.85-2.98s2.84 1.3 2.84 2.98-1.07 2.98-2.84 2.98c-1.77 0-2.85-1.3-2.85-2.98Zm4.39 0c0-1.14-.6-1.86-1.54-1.86-.93 0-1.55.72-1.55 1.86 0 1.15.62 1.86 1.55 1.86.95 0 1.54-.7 1.54-1.86Z"
        />
        <path
          d="M6.78 6.32H5.5V12h1.27V6.32Z"
        />
        <path
          d="M10.46 6.32H7.75V12H9V9.96h1.45c1.15 0 1.88-.74 1.88-1.82s-.73-1.82-1.88-1.82Zm-.24 1.04c.53 0 .86.28.86.78s-.33.78-.86.78H9V7.36h1.22Z"
        />
        <path
          d="M19.57 3H6V1H4v2H2v12h2v6H2v2h6v-2H6v-6h13.57l3.6-6-3.6-6ZM4 5v8h14.43l2.4-4-2.4-4H4Z"
        />
      </g>
      <title>
        14
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Loan24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M8 17C8 15.8954 8.89543 15 10 15C11.1046 15 12 15.8954 12 17C12 18.1046 11.1046 19 10 19C8.89543 19 8 18.1046 8 17Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M23 1H6V11H1V23H19V11H8V3H21V23H23V1ZM3 21V13H17V21H3Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M15 7H19V5H15V7Z"
        fill="currentColor"
      />
      <title>
        15
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Market24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M4 1a3 3 0 00-3 3v19h19a3 3 0 003-3V1H4zM3 4a1 1 0 011-1h17v3.546l-7.11 6.222-5.02-3.012L3 15.206V4zm0 13.936V21h17a1 1 0 001-1V9.204l-6.89 6.028-4.98-2.988L3 17.936z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        16
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Money24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M15 12C15 13.6569 13.6569 15 12 15C10.3431 15 9 13.6569 9 12C9 10.3431 10.3431 9 12 9C13.6569 9 15 10.3431 15 12ZM13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M24 5H0V19H24V5ZM2 17V15.708C2.57672 15.96 3.04 16.4233 3.29198 17H2ZM5.38849 17C5.00674 15.3176 3.68238 13.9933 2 13.6115V10.3885C3.68238 10.0067 5.00674 8.68238 5.38849 7H18.6115C18.9933 8.68238 20.3176 10.0067 22 10.3885V13.6115C20.3176 13.9933 18.9933 15.3176 18.6115 17H5.38849ZM3.29198 7C3.04 7.57672 2.57672 8.04 2 8.29198V7H3.29198ZM20.708 17H22V15.708C21.4233 15.96 20.96 16.4233 20.708 17ZM22 8.29198V7H20.708C20.96 7.57672 21.4233 8.04 22 8.29198Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        17
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        News24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M8 5h6v6H8V5Zm2 2v2h2V7h-2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M16 7h4V5h-4v2Zm4 4h-4V9h4v2ZM8 13v2h12v-2H8Zm0 6v-2h12v2H8Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M4 1h20v19a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V8h4V1Zm2 19a3 3 0 0 1-.17 1H21a1 1 0 0 0 1-1V3H6v17Zm-3 1a1 1 0 0 0 1-1V10H2v10a1 1 0 0 0 1 1Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        18
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Office24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M13 .52v4.66l10 2V23h-2V8.82l-8-1.6V23h-2V3.48l-8 3.2V23H1V5.32l12-4.8Z"
        fill="currentColor"
      />
      <path
        d="M5 10h4V8H5v2Zm4 4H5v-2h4v2Zm-4 4h4v-2H5v2Zm4 4H5v-2h4v2Zm8-4a3 3 0 0 0-3 3v2h2v-2a1 1 0 1 1 2 0v2h2v-2a3 3 0 0 0-3-3Zm-3-8h2v2h-2v-2Zm2 4h-2v2h2v-2Zm2-4h2v2h-2v-2Zm2 4h-2v2h2v-2Z"
        fill="currentColor"
      />
      <title>
        19
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Orders24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <g
        fill="currentColor"
      >
        <path
          d="M4.00027 4.99998C4.00028 4.44771 4.44799 4 5.00027 4H19C19.5523 4 20 4.44772 20 5V22H22V5C22 3.34315 20.6569 2 19 2H5.00027C3.34344 2 2.0003 3.34312 2.00027 4.99995L2 22L4 22L4.00027 4.99998Z M6 9H18V7H6V9Z M18 14H6V12H18V14Z M6 19H12V17H6V19Z"
        />
      </g>
      <title>
        20
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Pension24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M6 12.5C5.72386 12.5 5.5 12.2761 5.5 12H3.5C3.5 13.3807 4.61929 14.5 6 14.5V12.5Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M0 13H0.553167C0.917089 15.5442 3.10515 17.5 5.75 17.5C8.6495 17.5 11 15.1495 11 12.25C11 12.1662 10.998 12.0828 10.9942 12H11C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12H13.0058C13.002 12.0828 13 12.1662 13 12.25C13 15.1495 15.3505 17.5 18.25 17.5C20.8949 17.5 23.0829 15.5442 23.4468 13H24V11H23.3503C22.7895 8.70399 20.7187 7 18.25 7C16.3348 7 14.6591 8.02552 13.7421 9.55739C13.251 9.20648 12.6496 9 12 9C11.3504 9 10.749 9.20648 10.2579 9.55739C9.34088 8.02552 7.6652 7 5.75 7C3.28126 7 1.2105 8.70399 0.649723 11H0V13ZM5.75 9C3.95507 9 2.5 10.4551 2.5 12.25C2.5 14.0449 3.95507 15.5 5.75 15.5C7.54493 15.5 9 14.0449 9 12.25C9 10.4551 7.54493 9 5.75 9ZM15 12.25C15 10.4551 16.4551 9 18.25 9C20.0449 9 21.5 10.4551 21.5 12.25C21.5 14.0449 20.0449 15.5 18.25 15.5C16.4551 15.5 15 14.0449 15 12.25Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        21
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Percent24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M5.99074 1H6.00926C8.21414 1.005 10 2.79394 10 4.99999C10 7.20913 8.20914 8.99999 6 8.99999C3.79086 8.99999 2 7.20913 2 4.99999C2 2.79394 3.78586 1.005 5.99074 1ZM6 2.99999C4.89543 2.99999 4 3.89542 4 4.99999C4 6.10456 4.89543 6.99999 6 6.99999C7.10457 6.99999 8 6.10456 8 4.99999C8 3.89542 7.10457 2.99999 6 2.99999Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M2.8344 23L18.364 1H20.8121L5.28248 23H2.8344Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M18 15C15.7909 15 14 16.7908 14 19C14 21.2091 15.7909 23 18 23C20.2091 23 22 21.2091 22 19C22 16.7908 20.2091 15 18 15ZM16 19C16 17.8954 16.8954 17 18 17C19.1046 17 20 17.8954 20 19C20 20.1046 19.1046 21 18 21C16.8954 21 16 20.1046 16 19Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        22
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Recommended24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M3 12C3 7.02944 7.02944 3 12 3C14.1888 3 16.1946 3.78054 17.7552 5.08026L11.6287 16.0205L8.92532 11H6.65381L10.423 18H12.8124L20.2446 4.72823L20.2497 4.72371L20.2482 4.72191L20.2493 4.71993L20.2461 4.71956C18.232 2.43996 15.2836 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23C18.0751 23 23 18.0751 23 12H21C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12Z"
        fill="currentColor"
      />
      <title>
        23
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        RecommendedFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12.8124 18H10.423L6.65381 11H8.92532L11.6287 16.0205L18.2513 4.19435C16.5391 2.82132 14.3655 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 9.58983 21.1473 7.3788 19.7272 5.65211L12.8124 18Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        24
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        RiskHigh24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 5C18.0751 5 23 10.1073 23 16.4074V17.4444H19.5V15.3704H20.9451C20.7532 13.5702 20.0676 11.9244 19.0319 10.5817L14.3278 15.46C14.439 15.7534 14.5 16.073 14.5 16.4074C14.5 17.8393 13.3807 19 12 19C10.6193 19 9.5 17.8393 9.5 16.4074C9.5 14.9756 10.6193 13.8148 12 13.8148C12.3224 13.8148 12.6306 13.8781 12.9136 13.9934L17.6177 9.11507C16.3229 8.04098 14.7359 7.33003 13 7.13104V8.62963H11V7.13104C9.23312 7.33359 7.6204 8.06656 6.31318 9.173L7.34099 10.2389L5.92678 11.7055L4.91286 10.654C3.90801 11.9833 3.24338 13.6024 3.05493 15.3704H4.5V17.4444H1V16.4074C1 10.1073 5.92487 5 12 5ZM11.5 16.4074C11.5 16.121 11.7239 15.8889 12 15.8889C12.2761 15.8889 12.5 16.121 12.5 16.4074C12.5 16.6938 12.2761 16.9259 12 16.9259C11.7239 16.9259 11.5 16.6938 11.5 16.4074Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        25
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        RiskLow24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 5C5.92487 5 1 10.1073 1 16.4074V17.4444H4.5V15.3704H3.05493C3.24682 13.5702 3.93238 11.9244 4.9681 10.5817L9.67219 15.46C9.56104 15.7534 9.5 16.073 9.5 16.4074C9.5 17.8393 10.6193 19 12 19C13.3807 19 14.5 17.8393 14.5 16.4074C14.5 14.9756 13.3807 13.8148 12 13.8148C11.6776 13.8148 11.3694 13.8781 11.0864 13.9934L6.38231 9.11507C7.67708 8.04098 9.26415 7.33003 11 7.13104V8.62963H13V7.13104C14.7669 7.33359 16.3796 8.06656 17.6868 9.173L16.659 10.2389L18.0732 11.7055L19.0871 10.654C20.092 11.9833 20.7566 13.6024 20.9451 15.3704H19.5V17.4444H23V16.4074C23 10.1073 18.0751 5 12 5ZM12.5 16.4074C12.5 16.121 12.2761 15.8889 12 15.8889C11.7239 15.8889 11.5 16.121 11.5 16.4074C11.5 16.6938 11.7239 16.9259 12 16.9259C12.2761 16.9259 12.5 16.6938 12.5 16.4074Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        26
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        RiskMedium24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 5C5.92487 5 1 10.1073 1 16.4074V17.4444H4.5V15.3704H3.05493C3.24339 13.6024 3.90801 11.9833 4.91286 10.654L5.92678 11.7055L7.34099 10.2389L6.31318 9.173C6.46301 9.04618 6.61686 8.92427 6.77449 8.8075C7.99213 7.9055 9.43564 7.31037 11 7.13104V14.0305C10.117 14.4306 9.5 15.3443 9.5 16.4074C9.5 17.8393 10.6193 19 12 19C13.3807 19 14.5 17.8393 14.5 16.4074C14.5 15.3443 13.883 14.4306 13 14.0305V7.13104C14.7669 7.33359 16.3796 8.06656 17.6868 9.173L16.659 10.2389L18.0732 11.7055L19.0871 10.654C20.092 11.9833 20.7566 13.6024 20.9451 15.3704H19.5V17.4444H23V16.4074C23 10.1073 18.0751 5 12 5ZM12 15.8889C11.7239 15.8889 11.5 16.121 11.5 16.4074C11.5 16.6938 11.7239 16.9259 12 16.9259C12.2761 16.9259 12.5 16.6938 12.5 16.4074C12.5 16.121 12.2761 15.8889 12 15.8889Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        27
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Shareville24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M5.80862 14.3569C4.31925 12.8676 4.32789 10.3576 5.93571 8.74977L11.6128 3.07269L11.6717 3.13162C12.2059 3.66578 12.527 4.52659 12.5324 5.46705L14.5324 5.45565C14.5247 4.11616 14.0737 2.7052 13.0859 1.7174L11.6128 0.244263L4.52149 7.33556C2.18132 9.67573 2.07617 13.4529 4.39441 15.7711C6.71265 18.0894 10.4898 17.9842 12.83 15.6441L15.384 13.09L13.9698 11.6758L11.4158 14.2298C9.80797 15.8377 7.29799 15.8463 5.80862 14.3569Z"
        fill="currentColor"
      />
      <path
        d="M18.1829 9.64285C19.6723 11.1322 19.6637 13.6422 18.0558 15.25L12.3788 20.9271L12.3198 20.8682C11.7857 20.334 11.4645 19.4732 11.4591 18.5327L9.45917 18.5441C9.46681 19.8836 9.91782 21.2946 10.9056 22.2824L12.3788 23.7555L19.47 16.6642C21.8102 14.3241 21.9154 10.5469 19.5971 8.22863C17.2789 5.91039 13.5017 6.01555 11.1615 8.35572L8.60752 10.9097L10.0217 12.324L12.5758 9.76993C14.1836 8.16212 16.6935 8.15348 18.1829 9.64285Z"
        fill="currentColor"
      />
      <title>
        28
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Stock24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M14.9287 7L16.9287 5H23.9998V12.071L21.9998 14.071V8.6302L15.15 16.3362L8.19976 11.3717L1.78915 19.6139L0.210449 18.3861L7.79984 8.62827L14.8496 13.6638L20.773 7H14.9287Z"
        fill="currentColor"
      />
      <title>
        29
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Sustainable24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M22.3978 1.56L22.2611 2.8002C21.832 6.69447 21.2672 9.89217 20.5579 12.3748C19.8573 14.827 18.9814 16.7087 17.847 17.8431C16.1765 19.5136 13.969 20.3228 11.7817 20.2706L11.8295 18.2712C13.4926 18.3109 15.1649 17.6968 16.4328 16.4289C17.1979 15.6638 17.9597 14.1883 18.6348 11.8253C19.2273 9.7516 19.7271 7.09084 20.1278 3.83003C16.867 4.23074 14.2062 4.73049 12.1325 5.32298C9.76956 5.99811 8.29402 6.75991 7.52891 7.52501C5.3108 9.74312 5.09372 13.2045 6.87765 15.666L13.9418 8.60181L15.356 10.016L2.97427 22.3978L1.56006 20.9836L5.44977 17.0938C2.89258 13.8383 3.11422 9.11127 6.1147 6.1108C7.2491 4.97639 9.13087 4.10056 11.5831 3.39994C14.0657 2.69062 17.2634 2.12586 21.1576 1.69668L22.3978 1.56Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        30
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SustainableFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M22.3978 1.56L22.2611 2.8002C21.832 6.69447 21.2672 9.89217 20.5579 12.3748C19.8573 14.827 18.9814 16.7087 17.847 17.8431C16.1765 19.5136 13.969 20.3228 11.7817 20.2706L11.8295 18.2712C13.4926 18.3109 15.1649 17.6968 16.4328 16.4289C17.1979 15.6638 17.9597 14.1883 18.6348 11.8253C19.1254 10.1084 19.5524 7.98901 19.9122 5.45982L2.97427 22.3978L1.56006 20.9836L5.44977 17.0938C2.89258 13.8383 3.11422 9.11127 6.1147 6.1108C7.2491 4.97639 9.13087 4.10056 11.5831 3.39994C14.0657 2.69062 17.2634 2.12586 21.1576 1.69668L22.3978 1.56Z"
        fill="currentColor"
      />
      <title>
        31
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Tax24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M7 18v2h6v-2H7Zm10-2H7v-2h10v2ZM14.08 4l-6.94 8H9.8l6.93-8h-2.64ZM17 10.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0ZM8.5 7a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M3 24V0h18v24H3ZM5 2h14v20H5V2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        32
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Villa24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M13.5 8.8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0ZM8 11.3H5v3h3v-3Zm5.5 0v3h-3v-3h3Zm5.5 0h-3v3h3v-3Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M13.56 3.3h5.94L23 7.97V22.3H13v-3a1 1 0 1 0-2 0v3H1V7.97L4.5 3.3h5.94L12 2l1.56 1.3Zm2.4 2 2.4 2H20l-1.5-2h-2.54Zm5.04 15v-11h-3.36L12 4.6 6.36 9.3H3v11h6v-1a3 3 0 0 1 6 0v1h6ZM5.64 7.3H4l1.5-2h2.54l-2.4 2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        33
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Finance 32px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Apartment32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M22 1H1v31h2V3h17v29h2V17h7v15h2V15h-9V1Z"
        fill="currentColor"
      />
      <path
        d="M8 29a4 4 0 0 1 8 0v3h-2v-3a2 2 0 1 0-4 0v3H8v-3Zm0-9H5v3h3v-3Zm-3-5h3v3H5v-3Zm3-5H5v3h3v-3ZM5 5h3v3H5V5Zm8 15h-3v3h3v-3Zm-3-5h3v3h-3v-3Zm3-5h-3v3h3v-3Zm-3-5h3v3h-3V5Zm8 15h-3v3h3v-3Zm6 9h3v3h-3v-3Zm-6-14h-3v3h3v-3Zm6 9h3v3h-3v-3Zm-6-14h-3v3h3v-3Zm6 9h3v3h-3v-3ZM18 5h-3v3h3V5Z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Approve32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <g
        fill="currentColor"
      >
        <path
          d="M6 3C4.34315 3 3 4.34315 3 6V29H5V6C5 5.44772 5.44772 5 6 5H26C26.5523 5 27 5.44772 27 6V29H29V6C29 4.34315 27.6569 3 26 3H6Z"
        />
        <path
          d="M8 11H24V9H8V11Z"
        />
        <path
          d="M24 17H8V15H24V17Z"
        />
        <path
          d="M8 23H16V21H8V23Z"
        />
      </g>
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Bank32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M30.3943 8.5788L29.6064 10.4171L16.0004 4.58591L2.39428 10.4171L1.60645 8.5788L16.0004 2.40997L30.3943 8.5788Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M12.1263 10.4979C12.5703 8.7727 14.1364 7.49793 16.0002 7.49793C17.8641 7.49793 19.4302 8.7727 19.8742 10.4979H27.0002V25.4979H25.0002V12.4979H23.0002V25.4979H21.0002V22.4979H11.0002V25.4979H9.00024L9.00024 12.4979H7.00024L7.00024 25.4979H5.00024L5.00024 10.4979H12.1263ZM12.1263 12.4979H11.0002L11.0002 20.4979H21.0002V12.4979H19.8742C19.4302 14.2232 17.8641 15.4979 16.0002 15.4979C14.1364 15.4979 12.5703 14.2232 12.1263 12.4979ZM14.0002 11.4979C14.0002 10.3934 14.8957 9.49793 16.0002 9.49793C17.1048 9.49793 18.0002 10.3934 18.0002 11.4979C18.0002 12.6025 17.1048 13.4979 16.0002 13.4979C14.8957 13.4979 14.0002 12.6025 14.0002 11.4979Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M30.0002 27.4979V29.4979H2.00024V27.4979H30.0002Z"
        fill="currentColor"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Controls32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M2 7H5.12602C5.57006 8.72523 7.13616 10 9 10C10.8638 10 12.4299 8.72523 12.874 7H30V5H12.874C12.4299 3.27477 10.8638 2 9 2C7.13616 2 5.57006 3.27477 5.12602 5H2V7ZM9 4C7.89543 4 7 4.89543 7 6C7 7.10457 7.89543 8 9 8C10.1046 8 11 7.10457 11 6C11 4.89543 10.1046 4 9 4Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M19.874 27C19.4299 28.7252 17.8638 30 16 30C14.1362 30 12.5701 28.7252 12.126 27H2V25H12.126C12.5701 23.2748 14.1362 22 16 22C17.8638 22 19.4299 23.2748 19.874 25L30 25V27L19.874 27ZM16 28C17.1046 28 18 27.1046 18 26C18 24.8954 17.1046 24 16 24C14.8954 24 14 24.8954 14 26C14 27.1046 14.8954 28 16 28Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M23 20C24.8638 20 26.4299 18.7252 26.874 17H30V15H26.874C26.4299 13.2748 24.8638 12 23 12C21.1362 12 19.5701 13.2748 19.126 15L2 15V17L19.126 17C19.5701 18.7252 21.1362 20 23 20ZM25 16C25 17.1046 24.1046 18 23 18C21.8954 18 21 17.1046 21 16C21 14.8954 21.8954 14 23 14C24.1046 14 25 14.8954 25 16Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Fee32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M9 6C7.34315 6 6 7.34315 6 9C6 10.6569 7.34315 12 9 12C10.6569 12 12 10.6569 12 9C12 7.34315 10.6569 6 9 6ZM8 9C8 8.44772 8.44772 8 9 8C9.55228 8 10 8.44772 10 9C10 9.55228 9.55228 10 9 10C8.44772 10 8 9.55228 8 9Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M14.4142 1H1V14.4142L18 31.4142L31.4142 18L14.4142 1ZM3 13.5858V3H13.5858L28.5858 18L18 28.5858L3 13.5858Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FeeNone32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M2.29281 3.70712L28.2928 29.7071L29.7071 28.2929L3.70702 2.29291L2.29281 3.70712Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M0 6.99999H4.17133L6.17133 8.99999H5.89998C5.5023 10.9591 3.95913 12.5023 2 12.9V19.1C3.95913 19.4977 5.5023 21.0409 5.89998 23H20.1713L22.1713 25H0V6.99999ZM3.82929 8.99999H2V10.8293C2.85241 10.528 3.52801 9.8524 3.82929 8.99999ZM2 21.1707V23H3.82929C3.52801 22.1476 2.85241 21.472 2 21.1707Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M9.82819 6.99999L11.8282 8.99999H26.1C26.4977 10.9591 28.0409 12.5023 30 12.9V19.1C28.0409 19.4977 26.4977 21.0409 26.1 23H25.8282L27.8282 25H32V6.99999H9.82819ZM30 8.99999H28.1707C28.472 9.8524 29.1476 10.528 30 10.8293V8.99999ZM28.1707 23C28.472 22.1476 29.1476 21.472 30 21.1707V23H28.1707Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Fund32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M24 2H2V20L4 18V4H22V30H24V11H28V30H30V9H24V2Z"
        fill="currentColor"
      />
      <path
        d="M9 12H13.5858L2 23.5858V30H4V24.4142L15 13.4142V18L17 16V10H11L9 12Z"
        fill="currentColor"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FundVariety32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M31.41 8 24 .59 16.59 8 24 15.41 31.41 8ZM24 12.59 19.41 8 24 3.41 28.59 8 24 12.59ZM15 1H1v14h14V1ZM3 13V3h10v10H3Zm5 3.59L15.41 24 8 31.41.59 24 8 16.59ZM3.41 24 8 28.59 12.59 24 8 19.41 3.41 24ZM31 17H17v14h14V17ZM19 29V19h10v10H19Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Global32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M1 16C1 7.71573 7.71573 1 16 1C24.2843 1 31 7.71573 31 16C31 24.2843 24.2843 31 16 31C7.71573 31 1 24.2843 1 16ZM3.40066 12.7848C4.57006 8.18843 8.18843 4.57006 12.7848 3.40066C12.3919 4.08772 12.0478 4.89536 11.7515 5.78428C11.2857 7.18161 10.918 8.84138 10.6738 10.6738C8.84137 10.918 7.18161 11.2857 5.78428 11.7515C4.89536 12.0478 4.08772 12.3919 3.40066 12.7848ZM10.4587 12.7238C8.93071 12.9505 7.56247 13.2669 6.41673 13.6489C5.20822 14.0517 4.30235 14.5093 3.71916 14.9689C3.1247 15.4374 3 15.7934 3 16C3 16.2066 3.1247 16.5626 3.71916 17.0311C4.30235 17.4907 5.20822 17.9483 6.41673 18.3511C7.56247 18.7331 8.93071 19.0495 10.4587 19.2762C10.3765 18.2207 10.3333 17.1238 10.3333 16C10.3333 14.8762 10.3765 13.7793 10.4587 12.7238ZM12.4854 19.5146C12.3865 18.3975 12.3333 17.2195 12.3333 16C12.3333 14.7805 12.3865 13.6025 12.4854 12.4854C13.6025 12.3865 14.7805 12.3333 16 12.3333C17.2195 12.3333 18.3975 12.3865 19.5146 12.4854C19.6135 13.6025 19.6667 14.7805 19.6667 16C19.6667 17.2195 19.6135 18.3975 19.5146 19.5146C18.3975 19.6135 17.2195 19.6667 16 19.6667C14.7805 19.6667 13.6025 19.6135 12.4854 19.5146ZM10.6738 21.3262C8.84138 21.082 7.18161 20.7143 5.78428 20.2485C4.89536 19.9522 4.08772 19.6081 3.40066 19.2152C4.57006 23.8116 8.18843 27.4299 12.7848 28.5993C12.3919 27.9123 12.0478 27.1046 11.7515 26.2157C11.2857 24.8184 10.918 23.1586 10.6738 21.3262ZM12.7238 21.5413C13.7793 21.6235 14.8762 21.6667 16 21.6667C17.1238 21.6667 18.2207 21.6235 19.2762 21.5413C19.0495 23.0693 18.7331 24.4375 18.3511 25.5833C17.9483 26.7918 17.4907 27.6976 17.0311 28.2808C16.5626 28.8753 16.2066 29 16 29C15.7934 29 15.4374 28.8753 14.9689 28.2808C14.5093 27.6976 14.0517 26.7918 13.6489 25.5833C13.2669 24.4375 12.9505 23.0693 12.7238 21.5413ZM19.2152 28.5993C23.8116 27.4299 27.4299 23.8116 28.5993 19.2152C27.9123 19.6081 27.1046 19.9522 26.2157 20.2485C24.8184 20.7143 23.1586 21.082 21.3262 21.3262C21.082 23.1586 20.7143 24.8184 20.2485 26.2157C19.9522 27.1046 19.6081 27.9123 19.2152 28.5993ZM21.5413 19.2762C23.0693 19.0495 24.4375 18.7331 25.5833 18.3511C26.7918 17.9483 27.6976 17.4907 28.2808 17.0311C28.8753 16.5626 29 16.2066 29 16C29 15.7934 28.8753 15.4374 28.2808 14.9689C27.6976 14.5093 26.7918 14.0517 25.5833 13.6489C24.4375 13.2669 23.0693 12.9505 21.5413 12.7238C21.6235 13.7793 21.6667 14.8762 21.6667 16C21.6667 17.1238 21.6235 18.2207 21.5413 19.2762ZM21.3262 10.6738C23.1586 10.918 24.8184 11.2857 26.2157 11.7515C27.1046 12.0478 27.9123 12.3919 28.5993 12.7848C27.4299 8.18843 23.8116 4.57006 19.2152 3.40066C19.6081 4.08772 19.9522 4.89536 20.2485 5.78428C20.7143 7.18161 21.082 8.84138 21.3262 10.6738ZM19.2762 10.4587C18.2207 10.3765 17.1238 10.3333 16 10.3333C14.8762 10.3333 13.7793 10.3765 12.7238 10.4587C12.9505 8.93071 13.2669 7.56247 13.6489 6.41673C14.0517 5.20822 14.5093 4.30235 14.9689 3.71916C15.4374 3.1247 15.7934 3 16 3C16.2066 3 16.5626 3.1247 17.0311 3.71916C17.4907 4.30235 17.9483 5.20822 18.3511 6.41673C18.7331 7.56247 19.0495 8.93071 19.2762 10.4587Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Gold32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <g
        fill="currentColor"
      >
        <path
          d="M17.0002 6V0H15.0002V6H17.0002Z"
        />
        <path
          clipRule="evenodd"
          d="M10.2194 10H21.7809L23.7809 18H29.5001L32.0002 28H0.000151038L2.50015 18H8.21939L10.2194 10ZM20.2194 12L21.7194 18H10.2809L11.7809 12H20.2194ZM14.2809 20H17.7194L16.0002 26.8769L14.2809 20ZM4.0617 20H12.2194L13.7194 26H2.5617L4.0617 20ZM18.2809 26L19.7809 20H27.9386L29.4386 26H18.2809Z"
          fillRule="evenodd"
        />
        <path
          d="M32.2429 4L28.0003 8.24264L26.5861 6.82843L30.8287 2.58579L32.2429 4Z"
        />
        <path
          d="M0 4.00003L4.24264 8.24267L5.65685 6.82846L1.41421 2.58582L0 4.00003Z"
        />
      </g>
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Growth32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M23 6v2.83l3-3V30h2V5.83l3 3V6l-4-4-4 4Zm-3 24V10h-2v20h2Zm-8-14v14h-2V16h2Zm-8 6v8H2v-8h2Z"
        fill="currentColor"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Guidance32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M17.0002 4H26.0002V14H17.0002V16H25.5099L30.3987 21L25.5099 26H17.0002V29H22.0002V31H10.0002V29H15.0002V26H6.00015V16H15.0002V14H6.49045L1.60156 9L6.49045 4H15.0002V1H17.0002V4ZM7.33207 12H24.0002V6H7.33207L4.39874 9L7.33207 12ZM8.00015 18V24H24.6682L27.6016 21L24.6682 18H8.00015Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InvestBear32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M20 6H10a4 4 0 1 0-5.64 3.65l-1.48 6.42a9 9 0 0 0 1.67 7.55L9.5 30h11l2.92-3.76L22 24.8 19.5 28h-9l-4.37-5.61a7 7 0 0 1-1.29-5.87l1.79-7.74A1 1 0 0 1 7.59 8h14.82a1 1 0 0 1 .97.78l.75 3.22h2.05l-.54-2.35A4 4 0 1 0 20 6ZM4 6a2 2 0 1 1 4 0h-.4a3 3 0 0 0-2.7 1.67A2 2 0 0 1 4 6Zm22 0a2 2 0 0 1-.9 1.67A3 3 0 0 0 22.4 6H22a2 2 0 1 1 4 0Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M13 13.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm7 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0ZM12 21a2 2 0 0 0 2 2v3h2v-3a2 2 0 0 0 2-2v-2l-3 2-3-2v2Zm13 1.17-3-3v2.82l4 4 4-4v-2.82l-3 3V14h-2v8.17Z"
        fill="currentColor"
      />
      <title>
        13
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InvestBull32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M7 14.86a7.03 7.03 0 0 1-4.07-2.91A11.3 11.3 0 0 1 1 5.47C1 3.7 1.37 2.02 2.02.6l1.91.5A7.83 7.83 0 0 0 5.2 6.3c.7.99 1.58 1.6 2.5 1.78A3 3 0 0 1 10 7h12a3 3 0 0 1 2.3 1.07c.92-.18 1.8-.8 2.5-1.8a7.83 7.83 0 0 0 1.27-5.19l1.9-.5A11.84 11.84 0 0 1 31 5.49c0 2.47-.72 4.75-1.93 6.47-.32.45-.67.86-1.06 1.23l-1.41-1.41c.3-.28.58-.6.84-.97a8.95 8.95 0 0 0 1.5-4.2 8.3 8.3 0 0 1-.5.83A6.23 6.23 0 0 1 25 9.96v2.21l-2 2V10a1 1 0 0 0-1-1H10a1 1 0 0 0-1 1v8.67l3 4V27a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-1.34l2-2V27a3 3 0 0 1-3 3h-6a3 3 0 0 1-3-3v-3.67l-3-4v-4.47ZM4.56 10.8a8.95 8.95 0 0 1-1.5-4.2c.16.3.32.57.5.83A6.23 6.23 0 0 0 7 9.96v2.82c-.9-.33-1.75-1-2.44-1.98Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M11 14a3 3 0 0 0 3 3v-2a1 1 0 0 1-1-1v-1h-2v1Zm3 13a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm4 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0-10a3 3 0 0 0 3-3v-1h-2v1a1 1 0 0 1-1 1v2Zm9 .83 3 3V18l-4-4-4 4v2.83l3-3V26h2v-8.17Z"
        fill="currentColor"
      />
      <title>
        14
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Ipo32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <g
        clipRule="evenodd"
        fill="currentColor"
        fillRule="evenodd"
      >
        <path
          d="M19.52 8.27c-2.2 0-3.55 1.63-3.55 3.73s1.35 3.73 3.55 3.73c2.21 0 3.55-1.63 3.55-3.73s-1.34-3.73-3.55-3.73Zm0 1.4c1.18 0 1.93.9 1.93 2.33 0 1.44-.75 2.33-1.93 2.33-1.16 0-1.93-.89-1.93-2.33 0-1.43.77-2.33 1.93-2.33Z"
        />
        <path
          d="M7 8.45h1.58v7.1H7v-7.1Z"
        />
        <path
          d="M9.8 8.45h3.38c1.44 0 2.35.93 2.35 2.28 0 1.35-.9 2.27-2.35 2.27h-1.8v2.55h-1.6v-7.1Zm4.16 2.28c0-.63-.42-.98-1.08-.98h-1.52v1.95h1.52c.66 0 1.08-.35 1.08-.97Z"
        />
        <path
          d="M7 4V1H5v3H2v16h3v9H2v2h8v-2H7v-9h18.58l4.57-8-4.57-8H7ZM4 18V6h20.42l3.43 6-3.43 6H4Z"
        />
      </g>
      <title>
        15
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Loan32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M8 1H30V31H28V3H10V17H25V31H2V17H8V1ZM4 19V29H23V19H4ZM12.5 24C12.5 23.4477 12.9477 23 13.5 23C14.0523 23 14.5 23.4477 14.5 24C14.5 24.5523 14.0523 25 13.5 25C12.9477 25 12.5 24.5523 12.5 24ZM13.5 21C11.8431 21 10.5 22.3431 10.5 24C10.5 25.6569 11.8431 27 13.5 27C15.1569 27 16.5 25.6569 16.5 24C16.5 22.3431 15.1569 21 13.5 21ZM25 8L21 8V6L25 6V8ZM13 14H25V12H13V14Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        16
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Market32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M4 1C2.34315 1 1 2.34315 1 4V31H28C29.6569 31 31 29.6569 31 28V1H4ZM3 4C3 3.44772 3.44772 3 4 3H29V8.58588L19.9062 17.6796L11.9062 11.6796L3 20.5859V4ZM3 23.4143V29H28C28.5523 29 29 28.5523 29 28V11.4143L20.0939 20.3204L12.0939 14.3204L3 23.4143Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        17
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Money32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M16 12C13.7909 12 12 13.7909 12 16C12 18.2091 13.7909 20 16 20C18.2091 20 20 18.2091 20 16C20 13.7909 18.2091 12 16 12ZM14 16C14 14.8954 14.8954 14 16 14C17.1046 14 18 14.8954 18 16C18 17.1046 17.1046 18 16 18C14.8954 18 14 17.1046 14 16Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M31 7H1V25H31V7ZM3 10.8293V9H4.82929C4.52801 9.85241 3.85241 10.528 3 10.8293ZM3 12.9V19.1C4.95913 19.4977 6.5023 21.0409 6.89998 23H25.1C25.4977 21.0409 27.0409 19.4977 29 19.1V12.9C27.0409 12.5023 25.4977 10.9591 25.1 9H6.89998C6.5023 10.9591 4.95913 12.5023 3 12.9ZM27.1707 23C27.472 22.1476 28.1476 21.472 29 21.1707V23H27.1707ZM3 21.1707V23H4.82929C4.52801 22.1476 3.85241 21.472 3 21.1707ZM29 10.8293C28.1476 10.528 27.472 9.85241 27.1707 9H29V10.8293Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        18
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        News32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <g
        fill="currentColor"
      >
        <path
          clipRule="evenodd"
          d="M19 7H9v8h10V7Zm-8 6V9h6v4h-6Z"
          fillRule="evenodd"
        />
        <path
          d="M27 10h-6V8h6v2Zm-6 4h6v-2h-6v2Zm6 5H9v-2h18v2ZM9 23h18v-2H9v2Z"
        />
        <path
          clipRule="evenodd"
          d="M5 3h26v22a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3V12h4V3Zm23 23H6.83A3 3 0 0 0 7 25V5h22v20a1 1 0 0 1-1 1ZM3 14v11a1 1 0 1 0 2 0V14H3Z"
          fillRule="evenodd"
        />
      </g>
      <title>
        19
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Office32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M17 1.48V7.2l14 3V31h-2V11.8L17 9.25V31h-2V4.52L3 9.66V31H1V8.34l16-6.86Z"
        fill="currentColor"
      />
      <path
        d="M5 14h8v-2H5v2Zm8 5H5v-2h8v2Zm-8 5h8v-2H5v2Zm8 5H5v-2h8v2Zm10-5a4 4 0 0 0-4 4v3h2v-3a2 2 0 1 1 4 0v3h2v-3a4 4 0 0 0-4-4Zm-4-10h3v3h-3v-3Zm3 5h-3v3h3v-3Zm2-5h3v3h-3v-3Zm3 5h-3v3h3v-3Z"
        fill="currentColor"
      />
      <title>
        20
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Orders32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M6 3a3 3 0 0 0-3 3v23h2V6a1 1 0 0 1 1-1h20a1 1 0 0 1 1 1v23h2V6a3 3 0 0 0-3-3H6Z"
        fill="currentColor"
      />
      <path
        d="M8 11h16V9H8v2Zm16 6H8v-2h16v2ZM8 23h8v-2H8v2Z"
        fill="currentColor"
      />
      <title>
        21
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Pension32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M8 18a2 2 0 0 1-2-2H4a4 4 0 0 0 4 4v-2Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M14.5 13.4A7 7 0 0 0 1.07 15H0v2h1.07A7 7 0 0 0 15 16a1 1 0 1 1 2 0 7 7 0 0 0 13.93 1H32v-2h-1.07a7 7 0 0 0-13.43-1.6 2.99 2.99 0 0 0-3 0ZM3 16a5 5 0 1 1 10 0 5 5 0 0 1-10 0Zm16 0a5 5 0 1 1 10 0 5 5 0 0 1-10 0Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        22
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Percent32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="m3.52 30 22.4-28h2.56L6.08 30H3.52Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M23.01 30H23a5 5 0 1 1 .02 0ZM20 25a3 3 0 1 1 6 0 3 3 0 0 1-6 0ZM9 2a5 5 0 1 0 0 10A5 5 0 0 0 9 2ZM6 7a3 3 0 1 1 6 0 3 3 0 0 1-6 0Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        23
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Recommended32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M3 16C3 8.8203 8.8203 3 16 3C19.0133 3 21.7855 4.02416 23.9901 5.74452L15.1527 22.0365L11.3999 15H9.13327L13.9333 24H16.3629L26.519 5.27705L25.9221 4.75026C23.2785 2.41693 19.8035 1 16 1C7.71573 1 1 7.71573 1 16C1 24.2843 7.71573 31 16 31C24.2843 31 31 24.2843 31 16H29C29 23.1797 23.1797 29 16 29C8.8203 29 3 23.1797 3 16Z"
        fill="currentColor"
      />
      <title>
        24
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        RecommendedFill32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M16 31C24.2843 31 31 24.2843 31 16C31 11.8082 29.2806 8.01805 26.5086 5.29626L16.3629 24H13.9333L9.1333 15H11.4L15.1527 22.0364L23.9901 5.7445L24.9649 3.97263C22.464 2.10546 19.3611 1 16 1C7.71573 1 1 7.71573 1 16C1 24.2843 7.71573 31 16 31Z"
        fill="currentColor"
      />
      <title>
        25
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        RiskHigh32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M3.03789 21H6V23H1V22C1 13.7157 7.71573 7 16 7C24.2843 7 31 13.7157 31 22V23H26V21H28.9621C28.7384 18.059 27.5361 15.3916 25.6801 13.3225L18.5629 20.4398C18.8402 20.8944 19 21.4285 19 22C19 23.6569 17.6569 25 16 25C14.3431 25 13 23.6569 13 22C13 20.3431 14.3431 19 16 19C16.3516 19 16.6891 19.0605 17.0026 19.1716L24.2344 11.9399C22.2337 10.3004 19.7351 9.24596 17 9.03789V12H15V9.03789C12.2654 9.24591 9.76736 10.3 7.76692 11.9389L10.0423 14.2142L8.62808 15.6284L6.32096 13.3213C4.46437 15.3905 3.26166 18.0585 3.03789 21ZM16 21C15.4477 21 15 21.4477 15 22C15 22.5523 15.4477 23 16 23C16.5523 23 17 22.5523 17 22C17 21.4477 16.5523 21 16 21Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        26
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        RiskLow32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M28.9621 21H26V23H31V22C31 13.7157 24.2843 7 16 7C7.71573 7 1 13.7157 1 22V23H6V21H3.03789C3.26161 18.059 4.4639 15.3916 6.31987 13.3225L13.4371 20.4398C13.1598 20.8944 13 21.4285 13 22C13 23.6569 14.3431 25 16 25C17.6569 25 19 23.6569 19 22C19 20.3431 17.6569 19 16 19C15.6484 19 15.3109 19.0605 14.9974 19.1716L7.76565 11.9399C9.7663 10.3004 12.2649 9.24596 15 9.03789V12H17V9.03789C19.7346 9.24591 22.2326 10.3 24.2331 11.9389L21.9577 14.2142L23.3719 15.6284L25.679 13.3213C27.5356 15.3905 28.7383 18.0585 28.9621 21ZM16 21C16.5523 21 17 21.4477 17 22C17 22.5523 16.5523 23 16 23C15.4477 23 15 22.5523 15 22C15 21.4477 15.4477 21 16 21Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        27
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        RiskMedium32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M3.03789 21H6V23H1V22C1 13.7157 7.71573 7 16 7C24.2843 7 31 13.7157 31 22V23H26V21H28.9621C28.7384 18.059 27.5361 15.3916 25.6801 13.3225L23.3742 15.6284L21.96 14.2142L24.2343 11.9399C22.2337 10.3004 19.7351 9.24595 17 9.03789L17 19.1707C18.1652 19.5825 19 20.6938 19 22C19 23.6569 17.6569 25 16 25C14.3431 25 13 23.6569 13 22C13 20.6938 13.8348 19.5825 15 19.1707L15 9.03789C12.2654 9.24591 9.76736 10.3 7.76692 11.9389L10.0423 14.2142L8.62808 15.6284L6.32096 13.3213C4.46437 15.3905 3.26166 18.0585 3.03789 21ZM16 21C15.4477 21 15 21.4477 15 22C15 22.5523 15.4477 23 16 23C16.5523 23 17 22.5523 17 22C17 21.4477 16.5523 21 16 21Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        28
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Shareville32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M7.16113 19.8891C5.04482 17.7728 5.08201 14.19 7.38697 11.8851L15.2929 3.97918L15.6071 4.29345C16.392 5.07836 16.8377 6.32027 16.8375 7.65015L18.8375 7.65051C18.8378 5.92256 18.2657 4.12362 17.0213 2.87924L15.2929 1.15076L5.97276 10.4709C2.95144 13.4922 2.7864 18.3428 5.74691 21.3033C8.70743 24.2638 13.558 24.0988 16.5794 21.0775L20.025 17.6318L18.6108 16.2176L15.1651 19.6632C12.8602 21.9682 9.27743 22.0054 7.16113 19.8891Z"
        fill="currentColor"
      />
      <path
        d="M24.8384 12.1109C26.9547 14.2272 26.9175 17.81 24.6126 20.1149L16.7067 28.0208L16.3924 27.7065C15.6075 26.9216 15.1618 25.6797 15.1621 24.3499L13.1621 24.3495C13.1618 26.0774 13.7338 27.8764 14.9782 29.1208L16.7067 30.8492L26.0268 21.5291C29.0481 18.5078 29.2131 13.6572 26.2526 10.6967C23.2921 7.73619 18.4415 7.90123 15.4202 10.9225L11.9745 14.3682L13.3887 15.7824L16.8344 12.3368C19.1393 10.0318 22.7221 9.99461 24.8384 12.1109Z"
        fill="currentColor"
      />
      <title>
        29
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Stock32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M20.2494 9.00557L22.3058 7H32V16.454L29.9436 18.4595V10.6403L20.1589 21.3761L10.6136 14.7265L1.62321 26L0 24.7687L10.2024 11.9754L19.85 18.6963L28.6822 9.00557H20.2494Z"
        fill="currentColor"
      />
      <title>
        30
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Sustainable32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M29.9106 3.16349L30.0473 1.92328L28.8071 2.05996C23.4711 2.64803 19.1035 3.42053 15.7229 4.38641C12.3727 5.3436 9.86483 6.52485 8.37617 8.0135C4.31203 12.0776 4.08684 18.527 7.70062 22.8555L2.12256 28.4336L3.53677 29.8478L20.5368 12.8478L19.1226 11.4336L9.12195 21.4342C6.28512 17.8936 6.50794 12.7102 9.79039 9.42771C10.9097 8.30836 13.0114 7.24115 16.2723 6.30946C19.2445 5.46026 23.0755 4.75173 27.7797 4.19083C27.2188 8.89504 26.5103 12.726 25.6611 15.6982C24.7294 18.9591 23.6622 21.0608 22.5428 22.1802C20.7269 23.9961 18.3311 24.8756 15.9499 24.8187L15.9021 26.8181C18.8074 26.8875 21.7386 25.8129 23.9571 23.5944C25.4457 22.1057 26.627 19.5978 27.5841 16.2477C28.55 12.8671 29.3225 8.4995 29.9106 3.16349Z"
        fill="currentColor"
      />
      <title>
        31
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        SustainableFill32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M29.9106 3.16349L30.0473 1.92328L28.8071 2.05996C23.4711 2.64803 19.1035 3.42053 15.7229 4.38641C12.3727 5.3436 9.86483 6.52485 8.37617 8.0135C4.31203 12.0776 4.08684 18.527 7.70062 22.8555L2.12256 28.4336L3.53677 29.8478L27.5766 5.80798C27.0509 9.78074 26.4108 13.0742 25.6611 15.6982C24.7294 18.9591 23.6622 21.0608 22.5428 22.1802C20.7269 23.9961 18.3311 24.8756 15.9499 24.8187L15.9021 26.8181C18.8074 26.8875 21.7386 25.8129 23.9571 23.5944C25.4457 22.1057 26.627 19.5978 27.5841 16.2477C28.55 12.8671 29.3225 8.4995 29.9106 3.16349Z"
        fill="currentColor"
      />
      <title>
        32
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Tax32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M9 23h14v-2H9v2Zm0 4h8v-2H9v2Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M12 5a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm-1 3a1 1 0 1 1 2 0 1 1 0 0 1-2 0Zm6 7a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M19.92 5 9.52 18h2.56l10.4-13h-2.56Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M5 1h22v30H5V1Zm2 2v26h18V3H7Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        33
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Villa32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M13 11a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M10 16H6v4h4v-4Zm-4 6h4v4H6v-4Zm12-2v-4h-4v4h4Zm4-4h4v4h-4v-4Zm4 6h-4v4h4v-4Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M18.66 4 16 1.67 13.34 4H5.52L1 9.65V30h13v-4a2 2 0 1 1 4 0v4h13V9.65L26.48 4h-7.82Zm2.29 2 3.43 3h3.54l-2.4-3h-4.57ZM29 11h-5.38L16 4.33 8.38 11H3v17h9v-2a4 4 0 0 1 8 0v2h9V11ZM4.08 9h3.54l3.43-3H6.48l-2.4 3Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        34
      </title>
    </svg>
  </div>
</div>
`;
